--- a/src/contact/index.html
+++ b/src/contact/index.html
@@ -5,109 +5,112 @@ layout: default
 
 <div class="w-full px-0 mx-0">
   <!-- Contact Section -->
-  <section
-    class="container my-10 md:mt-40 px-6 bg-white grid grid-cols-1 md:grid-cols-8 gap-16"
-  >
-    <!-- Left Side: Contact Info -->
-    <div class="flex flex-col col-span-4 justify-center">
-      <h2 class="text-2xl md:text-4xl font-bold mb-4">Get in Touch</h2>
-      <p class="text-gray-600 mb-8">
-        Reach out to us directly or use the form to send us a message. We’d love
-        to hear from you!
-      </p>
-      <div class="space-y-6">
-        <div>
-          <h3 class="text-lg font-semibold">Phone</h3>
-          <p class="text-gray-700">(555) 555-5555</p>
-        </div>
-        <div>
-          <h3 class="text-lg font-semibold">Email</h3>
-          <p class="text-gray-700">contact@example.com</p>
-        </div>
-        <div>
-          <h3 class="text-lg font-semibold">Location</h3>
-          <p class="text-gray-700">123 Main Street, Hometown, USA</p>
+  <!-- Contact Section -->
+  <section class="my-10 bg-white p-8">
+    <div class="container grid grid-cols-1 md:grid-cols-2 gap-8">
+      <!-- Left Side: Contact Info -->
+      <div class="flex flex-col">
+        <h2 class="text-2xl md:text-4xl font-bold mb-4">Get in Touch</h2>
+        <p class="text-gray-600 mb-8">
+          Reach out to us directly or use the form to send us a message. We’d
+          love to hear from you!
+        </p>
+        <div class="space-y-6">
+          <div>
+            <h3 class="text-lg font-semibold">Phone</h3>
+            <p class="text-gray-700">(555) 555-5555</p>
+          </div>
+          <div>
+            <h3 class="text-lg font-semibold">Email</h3>
+            <p class="text-gray-700">contact@example.com</p>
+          </div>
+          <div>
+            <h3 class="text-lg font-semibold">Location</h3>
+            <p class="text-gray-700">123 Main Street, Hometown, USA</p>
+          </div>
         </div>
       </div>
-    </div>
 
-    <!-- Right Side: Contact Form -->
-    <div class="bg-gray-100 p-10 rounded-lg shadow-md col-span-4">
-      <form
-        method="POST"
-        action="/thank-you"
-        netlify
-        class="grid grid-cols-1 gap-4"
-      >
-        <!-- Name Field -->
-        <div>
-          <label for="name" class="block text-gray-700 font-semibold"
-            >Your Name</label
+      <!-- Right Side: Contact Form -->
+      <div class="flex justify-center items-center">
+        <div class="bg-gray-100 p-10 rounded-lg shadow-md w-full">
+          <form
+            method="POST"
+            action="/thank-you"
+            netlify
+            class="grid grid-cols-1 gap-4"
           >
-          <input
-            type="text"
-            id="name"
-            name="name"
-            required
-            placeholder="John Doe"
-            class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
-          />
-        </div>
+            <!-- Name Field -->
+            <div>
+              <label for="name" class="block text-gray-700 font-semibold"
+                >Your Name</label
+              >
+              <input
+                type="text"
+                id="name"
+                name="name"
+                required
+                placeholder="John Doe"
+                class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
+              />
+            </div>
 
-        <!-- Email Field -->
-        <div>
-          <label for="email" class="block text-gray-700 font-semibold"
-            >Your Email</label
-          >
-          <input
-            type="email"
-            id="email"
-            name="email"
-            required
-            placeholder="you@example.com"
-            class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
-          />
-        </div>
+            <!-- Email Field -->
+            <div>
+              <label for="email" class="block text-gray-700 font-semibold"
+                >Your Email</label
+              >
+              <input
+                type="email"
+                id="email"
+                name="email"
+                required
+                placeholder="you@example.com"
+                class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
+              />
+            </div>
 
-        <!-- Phone Field -->
-        <div>
-          <label for="phone" class="block text-gray-700 font-semibold"
-            >Your Phone</label
-          >
-          <input
-            type="tel"
-            id="phone"
-            name="phone"
-            placeholder="(555) 555-5555"
-            class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
-          />
-        </div>
+            <!-- Phone Field -->
+            <div>
+              <label for="phone" class="block text-gray-700 font-semibold"
+                >Your Phone</label
+              >
+              <input
+                type="tel"
+                id="phone"
+                name="phone"
+                placeholder="(555) 555-5555"
+                class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
+              />
+            </div>
 
-        <!-- Message Field -->
-        <div>
-          <label for="message" class="block text-gray-700 font-semibold"
-            >Your Message</label
-          >
-          <textarea
-            id="message"
-            name="message"
-            required
-            rows="6"
-            placeholder="Type your message here..."
-            class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-[#1E6CB0]"
-          ></textarea>
-        </div>
+            <!-- Message Field -->
+            <div>
+              <label for="message" class="block text-gray-700 font-semibold"
+                >Your Message</label
+              >
+              <textarea
+                id="message"
+                name="message"
+                required
+                rows="6"
+                placeholder="Type your message here..."
+                class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-[#1E6CB0]"
+              ></textarea>
+            </div>
 
-        <!-- Submit Button -->
-        <div class="text-center">
-          <button
-            type="submit"
-            class="px-8 py-4 bg-[#1E6CB0] text-white font-semibold rounded-lg hover:bg-blue-600"
-          >
-            Send Message
-          </button>
+            <!-- Submit Button -->
+            <div class="text-center mt-4">
+              <button
+                type="submit"
+                class="px-8 py-4 bg-[#1E6CB0] text-white font-semibold rounded-lg hover:bg-blue-600"
+              >
+                Send Message
+              </button>
+            </div>
+          </form>
         </div>
-      </form>
+      </div>
     </div>
   </section>
 </div>
