--- a/src/services/index.html
+++ b/src/services/index.html
@@ -5,13 +5,10 @@ layout: default
 
 <div class="w-full px-0 mx-0">
   <section
-    class="flex flex-col justify-center items-center text-center relative w-full h-[200px] md:h-[300px] bg-cover bg-center"
-    style="background-image: url('{{ settings.hero.background_image }}');"
+    class="flex flex-col justify-center items-center text-center relative w-full h-[150px] md:h-[250px] bg-[#1E6CB0] bg-cover bg-center"
   >
-    <!-- Blue overlay -->
-    <div class="absolute inset-0 bg-[#1E6CB0] opacity-50"></div>
     <div class="relative z-10 px-4 md:px-0">
-      <h1 class="text-4xl md:text-6xl font-bold text-white">SERVICES</h1>
+      <h1 class="text-4xl md:text-6xl font-bold text-white">{{title}}</h1>
     </div>
   </section>
   <section class="my-0 bg-gray-50 p-8 rounded-lg">
