--- a/src/vehicles/index.html
+++ b/src/vehicles/index.html
@@ -1,10 +1,16 @@
 ---
 layout: default
-title: Latest Vehicles
+title: Vehicle Inventory
 ---
 
-<div class="px-6">
-  <h1 class="font-bold pt-12">{{ title }}</h1>
+<div class="w-full px-0 mx-0">
+  <section
+    class="flex flex-col justify-center items-center text-center relative w-full h-[150px] md:h-[250px] bg-[#1E6CB0] bg-cover bg-center"
+  >
+    <div class="relative z-10 px-4 md:px-0">
+      <h1 class="text-4xl md:text-6xl font-bold text-white">{{title}}</h1>
+    </div>
+  </section>
 
   <!-- Featured Inventory Section -->
   <section class="container my-8 px-6">
