--- a/src/vehicles/index.html
+++ b/src/vehicles/index.html
@@ -18,11 +18,13 @@ title: Vehicle Inventory
       {% for post in collections.post | reverse %} {% if loop.index <= 6 %}
       <div class="border rounded-lg overflow-hidden shadow-md hover:shadow-lg">
         {% if post.data.image %}
-        <img
-          src="{{ post.data.image }}"
-          alt="{{ post.data.title | default('Vehicle Image') }}"
-          class="w-full h-48 object-cover"
-        />
+        <a href="{{ post.url | url }}">
+          <img
+            src="{{ post.data.image }}"
+            alt="{{ post.data.title | default('Vehicle Image') }}"
+            class="w-full h-48 object-cover"
+          />
+        </a>
         {% endif %}
         <div class="p-4">
           <h3 class="font-semibold text-lg">
@@ -47,21 +49,21 @@ title: Vehicle Inventory
         </div>
       </div>
       {% endif %} {% endfor %}
-    </div>
   </section>
 
   <section class="container my-8 px-6">
-    <h2 class="font-bold pt-12">Jeep</h2>
+    <h2 class="font-bold pt-12">$5000 or less</h2>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
-      {% for post in collections.post | reverse %} {% if "Jeep" in
-      post.data.brand %}
+      {% for post in collections.post | reverse %} {% if post.data.price < 5000 %}
       <div class="border rounded-lg overflow-hidden shadow-md hover:shadow-lg">
         {% if post.data.image %}
-        <img
-          src="{{ post.data.image }}"
-          alt="{{ post.data.title | default('Vehicle Image') }}"
-          class="w-full h-48 object-cover"
-        />
+        <a href="{{ post.url | url }}">
+          <img
+            src="{{ post.data.image }}"
+            alt="{{ post.data.title | default('Vehicle Image') }}"
+            class="w-full h-48 object-cover"
+          />
+        </a>
         {% endif %}
         <div class="p-4">
           <h3 class="font-semibold text-lg">
@@ -86,6 +88,200 @@ title: Vehicle Inventory
         </div>
       </div>
       {% endif %} {% endfor %}
-    </div>
+  </section>
+
+  <section class="container my-8 px-6">
+    <h2 class="font-bold pt-12">$5000 - $10,000</h2>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
+      {% for post in collections.post | reverse %}  {% if post.data.price >= 5000 and post.data.price < 10000 %}
+      <div class="border rounded-lg overflow-hidden shadow-md hover:shadow-lg">
+        {% if post.data.image %}
+        <a href="{{ post.url | url }}">
+          <img
+            src="{{ post.data.image }}"
+            alt="{{ post.data.title | default('Vehicle Image') }}"
+            class="w-full h-48 object-cover"
+          />
+        </a>
+        {% endif %}
+        <div class="p-4">
+          <h3 class="font-semibold text-lg">
+            <a href="{{ post.url | url }}">
+              {{ post.data.title | default('Untitled') }}
+            </a>
+          </h3>
+          <p class="text-base leading-6 text-gray-500 mb-3">
+            <time>{{ post.date | readableDate }}</time>
+          </p>
+          {% if post.data.description %}
+          <p class="text-lg text-gray-500 mb-3">{{ post.data.description }}</p>
+          {% endif %}
+          <p>
+            <a
+              href="{{ post.url | url }}"
+              class="text-[#1E6CB0] font-bold text-lg"
+            >
+              Read more →
+            </a>
+          </p>
+        </div>
+      </div>
+      {% endif %} {% endfor %}
+  </section>
+
+  <section class="container my-8 px-6">
+    <h2 class="font-bold pt-12">$10,000 - $15,000</h2>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
+      {% for post in collections.post | reverse %}  {% if post.data.price >= 10000 and post.data.price < 15000 %}
+      <div class="border rounded-lg overflow-hidden shadow-md hover:shadow-lg">
+        {% if post.data.image %}
+        <a href="{{ post.url | url }}">
+          <img
+            src="{{ post.data.image }}"
+            alt="{{ post.data.title | default('Vehicle Image') }}"
+            class="w-full h-48 object-cover"
+          />
+        </a>
+        {% endif %}
+        <div class="p-4">
+          <h3 class="font-semibold text-lg">
+            <a href="{{ post.url | url }}">
+              {{ post.data.title | default('Untitled') }}
+            </a>
+          </h3>
+          <p class="text-base leading-6 text-gray-500 mb-3">
+            <time>{{ post.date | readableDate }}</time>
+          </p>
+          {% if post.data.description %}
+          <p class="text-lg text-gray-500 mb-3">{{ post.data.description }}</p>
+          {% endif %}
+          <p>
+            <a
+              href="{{ post.url | url }}"
+              class="text-[#1E6CB0] font-bold text-lg"
+            >
+              Read more →
+            </a>
+          </p>
+        </div>
+      </div>
+      {% endif %} {% endfor %}
+  </section>
+
+  <section class="container my-8 px-6">
+    <h2 class="font-bold pt-12">$15,000 - $20,000</h2>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
+      {% for post in collections.post | reverse %}  {% if post.data.price >= 15000 and post.data.price < 20000 %}
+      <div class="border rounded-lg overflow-hidden shadow-md hover:shadow-lg">
+        {% if post.data.image %}
+        <a href="{{ post.url | url }}">
+          <img
+            src="{{ post.data.image }}"
+            alt="{{ post.data.title | default('Vehicle Image') }}"
+            class="w-full h-48 object-cover"
+          />
+        </a>
+        {% endif %}
+        <div class="p-4">
+          <h3 class="font-semibold text-lg">
+            <a href="{{ post.url | url }}">
+              {{ post.data.title | default('Untitled') }}
+            </a>
+          </h3>
+          <p class="text-base leading-6 text-gray-500 mb-3">
+            <time>{{ post.date | readableDate }}</time>
+          </p>
+          {% if post.data.description %}
+          <p class="text-lg text-gray-500 mb-3">{{ post.data.description }}</p>
+          {% endif %}
+          <p>
+            <a
+              href="{{ post.url | url }}"
+              class="text-[#1E6CB0] font-bold text-lg"
+            >
+              Read more →
+            </a>
+          </p>
+        </div>
+      </div>
+      {% endif %} {% endfor %}
+  </section>
+
+  <section class="container my-8 px-6">
+    <h2 class="font-bold pt-12">$20,000 - $25,000</h2>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
+      {% for post in collections.post | reverse %}  {% if post.data.price >= 20000 and post.data.price < 25000 %}
+      <div class="border rounded-lg overflow-hidden shadow-md hover:shadow-lg">
+        {% if post.data.image %}
+        <a href="{{ post.url | url }}">
+          <img
+            src="{{ post.data.image }}"
+            alt="{{ post.data.title | default('Vehicle Image') }}"
+            class="w-full h-48 object-cover"
+          />
+        </a>
+        {% endif %}
+        <div class="p-4">
+          <h3 class="font-semibold text-lg">
+            <a href="{{ post.url | url }}">
+              {{ post.data.title | default('Untitled') }}
+            </a>
+          </h3>
+          <p class="text-base leading-6 text-gray-500 mb-3">
+            <time>{{ post.date | readableDate }}</time>
+          </p>
+          {% if post.data.description %}
+          <p class="text-lg text-gray-500 mb-3">{{ post.data.description }}</p>
+          {% endif %}
+          <p>
+            <a
+              href="{{ post.url | url }}"
+              class="text-[#1E6CB0] font-bold text-lg"
+            >
+              Read more →
+            </a>
+          </p>
+        </div>
+      </div>
+      {% endif %} {% endfor %}
+  </section>
+
+  <section class="container my-8 px-6">
+    <h2 class="font-bold pt-12">$25,000 or more</h2>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
+      {% for post in collections.post | reverse %}  {% if post.data.price >= 25000  %}
+      <div class="border rounded-lg overflow-hidden shadow-md hover:shadow-lg">
+        {% if post.data.image %}
+        <a href="{{ post.url | url }}">
+          <img
+            src="{{ post.data.image }}"
+            alt="{{ post.data.title | default('Vehicle Image') }}"
+            class="w-full h-48 object-cover"
+          />
+        </a>
+        {% endif %}
+        <div class="p-4">
+          <h3 class="font-semibold text-lg">
+            <a href="{{ post.url | url }}">
+              {{ post.data.title | default('Untitled') }}
+            </a>
+          </h3>
+          <p class="text-base leading-6 text-gray-500 mb-3">
+            <time>{{ post.date | readableDate }}</time>
+          </p>
+          {% if post.data.description %}
+          <p class="text-lg text-gray-500 mb-3">{{ post.data.description }}</p>
+          {% endif %}
+          <p>
+            <a
+              href="{{ post.url | url }}"
+              class="text-[#1E6CB0] font-bold text-lg"
+            >
+              Read more →
+            </a>
+          </p>
+        </div>
+      </div>
+      {% endif %} {% endfor %}
   </section>
 </div>
