--- a/src/vehicles/index.html
+++ b/src/vehicles/index.html
@@ -8,33 +8,36 @@ title: Vehicle Inventory
     class="flex flex-col justify-center items-center text-center relative w-full h-[150px] md:h-[250px] bg-[#1E6CB0] bg-cover bg-center"
   >
     <div class="relative z-10 px-4 md:px-0">
-      <h1 class="text-4xl md:text-6xl font-bold text-white">{{title}}</h1>
+      <h1 class="text-white">{{title}}</h1>
     </div>
   </section>
 
   <!-- Featured Inventory Section -->
   <section class="container my-8 px-6">
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
-      {% for post in collections.post | reverse %} {% if loop.index <= 6 %}
+      {% for post in collections.post | reverse %}
+      {% if loop.index <= 6 %}
       <div class="border rounded-lg overflow-hidden shadow-md hover:shadow-lg">
         {% if post.data.image %}
         <a href="{{ post.url | url }}">
           <img
             src="{{ post.data.image }}"
             alt="{{ post.data.title | default('Vehicle Image') }}"
-            class="w-full h-48 object-cover"
+            class="w-full h-64 object-cover"
           />
         </a>
         {% endif %}
         <div class="p-4">
-          <h3 class="font-semibold text-lg">
+          <h3>
             <a href="{{ post.url | url }}">
               {{ post.data.title | default('Untitled') }}
             </a>
           </h3>
-          <p class="text-base leading-6 text-gray-500 mb-3">
-            <time>{{ post.date | readableDate }}</time>
-          </p>
+          <div class="text-base leading-6 text-gray-500 mb-3 flex flex-wrap gap-6 md:gap-6 border-b pb-2">
+            <span class="font-bold">${{post.data.price}}</span>
+            {% if post.data.miles %}<span class="font-bold"> {{ post.data.miles }} miles</span>{% endif %}
+            {% if post.date  %}<span class="font-medium">{{ post.date | readableDate }}</span>{% endif %}
+          </div>
           {% if post.data.description %}
           <p class="text-lg text-gray-500 mb-3">{{ post.data.description }}</p>
           {% endif %}
@@ -43,13 +46,16 @@ title: Vehicle Inventory
               href="{{ post.url | url }}"
               class="text-[#1E6CB0] font-bold text-lg"
             >
-              Read more →
+              See Details →
             </a>
           </p>
         </div>
       </div>
-      {% endif %} {% endfor %}
+      {% endif %}
+      {% endfor %}
+    </div>
   </section>
+  
 
   <section class="container my-8 px-6">
     <h2 class="font-bold pt-12">$5000 or less</h2>
@@ -61,18 +67,18 @@ title: Vehicle Inventory
           <img
             src="{{ post.data.image }}"
             alt="{{ post.data.title | default('Vehicle Image') }}"
-            class="w-full h-48 object-cover"
+            class="w-full h-64 object-cover"
           />
         </a>
         {% endif %}
         <div class="p-4">
-          <h3 class="font-semibold text-lg">
+          <h3>
             <a href="{{ post.url | url }}">
               {{ post.data.title | default('Untitled') }}
             </a>
           </h3>
           <p class="text-base leading-6 text-gray-500 mb-3">
-            <time>{{ post.date | readableDate }}</time>
+            {{ post.date | readableDate }}
           </p>
           {% if post.data.description %}
           <p class="text-lg text-gray-500 mb-3">{{ post.data.description }}</p>
@@ -82,7 +88,7 @@ title: Vehicle Inventory
               href="{{ post.url | url }}"
               class="text-[#1E6CB0] font-bold text-lg"
             >
-              Read more →
+              See details →
             </a>
           </p>
         </div>
@@ -100,18 +106,18 @@ title: Vehicle Inventory
           <img
             src="{{ post.data.image }}"
             alt="{{ post.data.title | default('Vehicle Image') }}"
-            class="w-full h-48 object-cover"
+            class="w-full h-64 object-cover"
           />
         </a>
         {% endif %}
         <div class="p-4">
-          <h3 class="font-semibold text-lg">
+          <h3>
             <a href="{{ post.url | url }}">
               {{ post.data.title | default('Untitled') }}
             </a>
           </h3>
           <p class="text-base leading-6 text-gray-500 mb-3">
-            <time>{{ post.date | readableDate }}</time>
+          {{ post.date | readableDate }}
           </p>
           {% if post.data.description %}
           <p class="text-lg text-gray-500 mb-3">{{ post.data.description }}</p>
@@ -121,7 +127,7 @@ title: Vehicle Inventory
               href="{{ post.url | url }}"
               class="text-[#1E6CB0] font-bold text-lg"
             >
-              Read more →
+              See details →
             </a>
           </p>
         </div>
@@ -139,18 +145,18 @@ title: Vehicle Inventory
           <img
             src="{{ post.data.image }}"
             alt="{{ post.data.title | default('Vehicle Image') }}"
-            class="w-full h-48 object-cover"
+            class="w-full h-64 object-cover"
           />
         </a>
         {% endif %}
         <div class="p-4">
-          <h3 class="font-semibold text-lg">
+          <h3>
             <a href="{{ post.url | url }}">
               {{ post.data.title | default('Untitled') }}
             </a>
           </h3>
           <p class="text-base leading-6 text-gray-500 mb-3">
-            <time>{{ post.date | readableDate }}</time>
+          {{ post.date | readableDate }}
           </p>
           {% if post.data.description %}
           <p class="text-lg text-gray-500 mb-3">{{ post.data.description }}</p>
@@ -160,7 +166,7 @@ title: Vehicle Inventory
               href="{{ post.url | url }}"
               class="text-[#1E6CB0] font-bold text-lg"
             >
-              Read more →
+              See details →
             </a>
           </p>
         </div>
@@ -169,7 +175,7 @@ title: Vehicle Inventory
   </section>
 
   <section class="container my-8 px-6">
-    <h2 class="font-bold pt-12">$15,000 - $20,000</h2>
+    <h2 class="pt-12">$15,000 - $20,000</h2>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
       {% for post in collections.post | reverse %}  {% if post.data.price >= 15000 and post.data.price < 20000 %}
       <div class="border rounded-lg overflow-hidden shadow-md hover:shadow-lg">
@@ -178,18 +184,18 @@ title: Vehicle Inventory
           <img
             src="{{ post.data.image }}"
             alt="{{ post.data.title | default('Vehicle Image') }}"
-            class="w-full h-48 object-cover"
+            class="w-full h-64 object-cover"
           />
         </a>
         {% endif %}
         <div class="p-4">
-          <h3 class="font-semibold text-lg">
+          <h3>
             <a href="{{ post.url | url }}">
               {{ post.data.title | default('Untitled') }}
             </a>
           </h3>
           <p class="text-base leading-6 text-gray-500 mb-3">
-            <time>{{ post.date | readableDate }}</time>
+         {{ post.date | readableDate }}
           </p>
           {% if post.data.description %}
           <p class="text-lg text-gray-500 mb-3">{{ post.data.description }}</p>
@@ -199,7 +205,7 @@ title: Vehicle Inventory
               href="{{ post.url | url }}"
               class="text-[#1E6CB0] font-bold text-lg"
             >
-              Read more →
+              See details →
             </a>
           </p>
         </div>
@@ -208,7 +214,7 @@ title: Vehicle Inventory
   </section>
 
   <section class="container my-8 px-6">
-    <h2 class="font-bold pt-12">$20,000 - $25,000</h2>
+    <h2 class="pt-12">$20,000 - $25,000</h2>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
       {% for post in collections.post | reverse %}  {% if post.data.price >= 20000 and post.data.price < 25000 %}
       <div class="border rounded-lg overflow-hidden shadow-md hover:shadow-lg">
@@ -217,18 +223,18 @@ title: Vehicle Inventory
           <img
             src="{{ post.data.image }}"
             alt="{{ post.data.title | default('Vehicle Image') }}"
-            class="w-full h-48 object-cover"
+            class="w-full h-64 object-cover"
           />
         </a>
         {% endif %}
         <div class="p-4">
-          <h3 class="font-semibold text-lg">
+          <h3>
             <a href="{{ post.url | url }}">
               {{ post.data.title | default('Untitled') }}
             </a>
           </h3>
           <p class="text-base leading-6 text-gray-500 mb-3">
-            <time>{{ post.date | readableDate }}</time>
+         {{ post.date | readableDate }}
           </p>
           {% if post.data.description %}
           <p class="text-lg text-gray-500 mb-3">{{ post.data.description }}</p>
@@ -238,7 +244,7 @@ title: Vehicle Inventory
               href="{{ post.url | url }}"
               class="text-[#1E6CB0] font-bold text-lg"
             >
-              Read more →
+              See details →
             </a>
           </p>
         </div>
@@ -247,7 +253,7 @@ title: Vehicle Inventory
   </section>
 
   <section class="container my-8 px-6">
-    <h2 class="font-bold pt-12">$25,000 or more</h2>
+    <h2 class="pt-12">$25,000 or more</h2>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
       {% for post in collections.post | reverse %}  {% if post.data.price >= 25000  %}
       <div class="border rounded-lg overflow-hidden shadow-md hover:shadow-lg">
@@ -256,18 +262,18 @@ title: Vehicle Inventory
           <img
             src="{{ post.data.image }}"
             alt="{{ post.data.title | default('Vehicle Image') }}"
-            class="w-full h-48 object-cover"
+            class="w-full h-64 object-cover"
           />
         </a>
         {% endif %}
         <div class="p-4">
-          <h3 class="font-semibold text-lg">
+          <h3>
             <a href="{{ post.url | url }}">
               {{ post.data.title | default('Untitled') }}
             </a>
           </h3>
           <p class="text-base leading-6 text-gray-500 mb-3">
-            <time>{{ post.date | readableDate }}</time>
+           {{ post.date | readableDate }}
           </p>
           {% if post.data.description %}
           <p class="text-lg text-gray-500 mb-3">{{ post.data.description }}</p>
@@ -277,7 +283,7 @@ title: Vehicle Inventory
               href="{{ post.url | url }}"
               class="text-[#1E6CB0] font-bold text-lg"
             >
-              Read more →
+              See details →
             </a>
           </p>
         </div>
